# packaging_test

./: README.md  override_version.py  pyproject.toml  setup.py
.github/workflows/: python-publish-testpypi.yml
my-example-project/my-example-project/: example.py
src/example_package/: example.py
