[tool.poetry]
name = "my-example-project"
version = "0.1.0"
description = ""
authors = ["Lingling <you@example.com>"]

packages = [
    { include = "my-example-project" },
    { include = "my-example-project/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"